<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offset_tricycle_controller</name>
  <version>1.0.0</version>
  <description>Controller for tricycle robots with laterally offset steering wheel.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>
  <depend>ackermann_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rcpputils</depend>
  <depend>realtime_tools</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
