<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offset_tricycle_robot</name>
  <version>0.0.1</version>
  <description>Gazebo Sim (gz-sim) robot model and launch files for tricycle robot</description>
  <maintainer email="melih@todo.com">Melih</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>offset_tricycle_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joy</depend>
  <depend>robot_localization</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
